--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 REACT_APP_BASE_API_URL = https://dc-relayer-api.herokuapp.com/api/
 REACT_APP_ZERO_ADDRESS = 0x0000000000000000000000000000000000000000
 REACT_APP_PRODUCTION = false
+REACT_APP_ENCRYPT_KEY = OFFICE_BIRYANI
