--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/crypto-js": "^4.1.1",
     "axios": "^0.24.0",
     "buffer": "^6.0.3",
     "clsx": "^1.1.1",
     "cra-script-nomod": "0.0.3",
+    "crypto-js": "^4.1.1",
     "env-cmd": "^10.1.0",
     "process": "^0.11.10",
     "react": "^18.1.0",
@@ -31,7 +33,7 @@
   },
   "scripts": {
     "start": "env-cmd -f .env.development react-app-rewired start",
-    "build": "env-cmd -f .env.development react-app-rewired build",
+    "build": "env-cmd -f .env react-app-rewired build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "start:prod": "env-cmd -f .env react-app-rewired start",
