--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-css-burger": "^0.2.0",
     "react-dom": "^18.1.0",
     "react-dropzone": "^12.1.0",
+    "react-random-reveal": "^2.0.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
